--- a/schedule/schedule_list.html
+++ b/schedule/schedule_list.html
@@ -12,8 +12,8 @@
 		<link rel="stylesheet" href="../css/training.css" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link href="../css/common.css" rel="stylesheet" />
-		<link href="../css/newList.css" rel="stylesheet" />
-		<link href="../css/newsArea.css" rel="stylesheet" />
+		<!--<link href="../css/newList.css" rel="stylesheet" />-->
+		<!--<link href="../css/newsArea.css" rel="stylesheet" />-->
 		<link href="../css/mui.picker.css" rel="stylesheet" />
 		<link href="../css/mui.poppicker.css" rel="stylesheet" />
 		
@@ -156,7 +156,7 @@
 			    </div>
 				<div class="mui-slider-group" id="group">
 					<div id="item1mobile" class="mui-slider-item mui-control-content mui-active">
-						<div id="scroll1" class="mui-scroll-wrapper">
+						<div id="scroll1" class="mui-scroll-wrapper" style="position: absolute;overflow: auto;">
 							<div class="mui-scroll">
 								<ul class="mui-table-view" id="List" style="margin-top: 0px !important;">
 
