--- a/charity/charity_list.html
+++ b/charity/charity_list.html
@@ -5,6 +5,7 @@
 		<meta charset="UTF-8">
 		<title>公益</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+		<meta name="viewport" content="width=320,maximum-scale=1.3,user-scalable=no">
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<!--App自定义的css-->
 		<style type="text/css">
