--- a/charity/charity_list.html
+++ b/charity/charity_list.html
@@ -13,7 +13,7 @@
 				height: 100%;
 				background: white;
 			}
-			.mui-preview-image.mui-fullscreen {
+			/*.mui-preview-image.mui-fullscreen {
 				position: fixed;
 				z-index: 20;
 				background-color: #000;
@@ -163,7 +163,7 @@
 			p img {
 				max-width: 100%;
 				height: auto;
-			}
+			}*/
 			
 			
 			
