--- a/charity/charity_list.html
+++ b/charity/charity_list.html
@@ -269,8 +269,8 @@
 						var str=template("charity",{list:list});
 						$(".mui-content").html(str);
 						$(".mui-table-view-cell").click(function() {
-							let id = $(this).attr('id'); // 获取id
-							let commentCount = $(this).attr('commentCount');
+							var id = $(this).attr('id'); // 获取id
+							var commentCount = $(this).attr('commentCount');
 							window.location.href = "newsContent.html?id=" + id + "&commentCount=" + commentCount + "&userID=" + 10005;
 						});
 						
