--- a/schedule/schedule_list.html
+++ b/schedule/schedule_list.html
@@ -19,6 +19,12 @@
 			li{
 				list-style: none;
 			}
+			.tittle{
+				font: 16px;
+				font-weight: bold;
+				color: #333333;
+			
+			}
 		</style>
 	</head>
 	<body>
@@ -77,7 +83,7 @@
 				<a onclick="content({{v.id}})">
 					<img class="mui-media-object mui-pull-left" src="{{v.pic}}">
 					<div class="mui-media-body">
-						<h4 class="mui-ellipsis" style="width: 80%;overflow: hidden;">{{v.Title}}</h4>
+						<h5 class="mui-ellipsis tittle" style="width: 80%;overflow: hidden;">{{v.Title}}</h5>
 						<p class="mui-ellipsis">{{v.tag}}</p>
 					</div>
 					<div>比赛时间：{{v.MatchDate}}</div>
@@ -96,7 +102,7 @@
 					{{/if}}
 					
 					<div class="mui-media-body">
-						<h4 class="mui-ellipsis" style="width: 80%;overflow: hidden;">{{v.Title}}</h4>
+						<h5 class="mui-ellipsis tittle" style="width: 80%;overflow: hidden;">{{v.Title}}</h5>
 						<p class="mui-ellipsis">{{(v.content).replace(/<\/?[^>]*>/g,"")}}</p>
 					</div>
 					<div>培训时间：{{v.TrainTime}} <button onclick="content({{v.id}})" class="mui-btn-blue border-radius mui-pull-right">快速报名</button></div>
