--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			<div class="attestationSelectHelp">
 				<span id="HelpSelect"><i></i><span>认证查询帮助</span></span>
 			</div>
+			<a href="announce/announce.html">公告详情页</a>
 			<div class="attestationHelpText">
 				<h3>中国跆协个人会员级位信息认证查询帮助说明:</h3>
 				<p>在级位证书编号栏中输入要查询的会员级位证书编号,级位证书编号为经中国跆拳道协会颁发的有效证书.为保障个人会员的信息安全,请在查询时,要求姓名和级位证书编号必须填写正确,点击查询即可确认中国跆拳道协会个人会员级位信息.</p>
