--- a/announce/announce.html
+++ b/announce/announce.html
@@ -35,7 +35,7 @@
 				<div id="sliderSegmentedControl" class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted"></div>
 				<!--<div id="sliderProgressBar" class="mui-slider-progress-bar"></div>-->
 				<div class="mui-slider-group">
-					<div class="mui-slider-item mui-control-content mui-active"></div>
+					<div class="mui-slider-item mui-control-content"></div>
 				</div>
 			</div>
 
