--- a/attestation/attestation.html
+++ b/attestation/attestation.html
@@ -16,18 +16,19 @@
 			}
 			.contCenter{
 				text-align: center;
-				height: 60px;
-				line-height: 60px;
+				height: 50px;
+				line-height: 50px;
 				margin-top: 10px;
+				color: #333333;
 			}
 			
 			.mui-search{
-				width: 90%;
+				width: 85%;
 				margin: 0 auto;
 			}
 			.mui-btn-primary{
-				height: 30px;
-				line-height:30px;
+				height: 35px;
+				line-height:35px;
 				text-align: center;
 				border-radius: 5px;
 				width: 90%;
