--- a/schedule/schedule_list.html
+++ b/schedule/schedule_list.html
@@ -275,6 +275,9 @@
 						window.location.href = "scheduleContent.html?id=" + id;
 					}
 					
+					$("#queding").click(function(){
+						$(".mui-poppicker .mui-active").hide()
+					})
 			
 		</script>
 	
