--- a/charity/GetGongyiNewsList.html
+++ b/charity/GetGongyiNewsList.html
@@ -23,7 +23,7 @@
 		<script type="text/html" id="GetGongyiNewsList">
 			{{each activition as value}}
 			<li class="activationRecordLi activationRecordLiFlex"  id="{{value.newsid}}" commentCount="{{value.commentCount}}">
-				<div class="EventTitle EventTitleCont" >
+				<div class="EventTitle EventTitleCont mui-ellipsis" >
 					<a style="color:#333;">{{value.newstitle}}</a>
 				</div>
 				<div class="EventTime EventTimeLeft">
