--- a/charity/charity_list.html
+++ b/charity/charity_list.html
@@ -275,7 +275,7 @@
 						});
 						
 						$(".more").click(function() {
-							window.location.href = "GetGongyiNewsList.html";
+							window.location.href = "GetGongyiNewsList.html?userID="+userID;
 						});
 						
 						$(".goIos").click(function() {
