--- a/charity/charity_list.html
+++ b/charity/charity_list.html
@@ -255,6 +255,7 @@
 			}
 			var id = GetQueryString("id");
 			var userID=GetQueryString("userID");
+			console.log(userID)
 			var urlPath="http://47.93.192.128:5001/";
 			var url =  urlPath+"News/GongyiList";
 				$.ajax({
