--- a/schedule/schedule_list.html
+++ b/schedule/schedule_list.html
@@ -5,9 +5,6 @@
 		<meta charset="utf-8">
 		<title>赛事</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-
 		<link rel="stylesheet" href="../css/mui.min.css">
 		<link href="../css/mui.picker.css" rel="stylesheet" />
 		<link href="../css/mui.poppicker.css" rel="stylesheet" />
@@ -275,11 +272,10 @@
 							pullRefresh(typeid,pageindex);
 						}
 						
-
 					}
 				});
 			}
-
+			
 
 			function pullRefresh(typeid,pageindex) {
 				
@@ -374,6 +370,10 @@
 			}
 
 			document.getElementById('slider').addEventListener('slide', function(e) {
+				if(e.detail.slideNumber==0){
+					var tyid=group.children().eq(e.detail.slideNumber).attr("name")
+					saiAjax(tyid);
+				}
 				var typeid = group.children().eq(e.detail.slideNumber).attr("name")
 				contAjax(typeid)
 			});
