--- a/training/training_list.html
+++ b/training/training_list.html
@@ -5,8 +5,7 @@
 		<meta charset="utf-8">
 		<title>培训</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+	
 
 		<link rel="stylesheet" href="../css/mui.min.css">
 		<link href="../css/mui.picker.css" rel="stylesheet" />
@@ -377,6 +376,10 @@
 
 			
 			document.getElementById('slider').addEventListener('slide', function(e) {
+					if(e.detail.slideNumber==0){
+						var tyid=group.children().eq(e.detail.slideNumber).attr("name")
+						contAjax(typeid)
+					}
 					var typeid = group.children().eq(e.detail.slideNumber).attr("name")
 					contAjax(typeid)
 				});
