--- a/schedule/schedule_list.html
+++ b/schedule/schedule_list.html
@@ -334,7 +334,7 @@
 							var id = $(this).attr("id")
 							window.location.href = "scheduleContent.html?id=" + id;
 						})
-
+						pullRefresh(typeid, pageindex)
 					}
 				});
 			}
