--- a/aboutUs/aboutUs.html
+++ b/aboutUs/aboutUs.html
@@ -21,7 +21,7 @@
 			margin:0.49rem auto 0.6rem;
 			border-radius: 2.16rem;
 			background: url(../images/zt.png) no-repeat center center;
-			background-size:120% 120%;
+			background-size:100%;
 		}
 		.version{
 			font-size:0.24rem;
