--- a/aboutUs/secret.html
+++ b/aboutUs/secret.html
@@ -20,8 +20,8 @@
 			height:2.16rem;
 			margin:0.49rem auto 0.6rem;
 			border-radius: 2.16rem;
-			background: url(../images/zt.png) no-repeat center center;
-			background-size:121% 121%;
+			background: url(../images/ztxx.png) no-repeat center center;
+			background-size:100%;
 		}
 		.secretArticleTil{
 			font-size:0.28rem;
@@ -38,6 +38,8 @@
 			color:#333;
 			line-height:0.5rem;
 		}
+		
+		
 	</style>
 	<body>
 		<div class="mui-content">
@@ -58,19 +60,7 @@
 		<script src="../js/flexable.js"></script>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/common.js"></script>
-		<script>
-			mui.ajax("url",{
-				dataType:'json',//服务器返回json格式数据
-				type:'post',//HTTP请求类型
-				timeout:10000,//超时时间设置为10秒；
-				success:function(data){
-					/*data是后台处理好，前台是显示用的*/
-				},
-				error:function(xhr,type,errorThrown){
-					console.log(type);
-				}
-			}) 
-		</script>
+		
 	</body>
 
 </html>
