--- a/aboutUs/aboutUs.html
+++ b/aboutUs/aboutUs.html
@@ -14,26 +14,14 @@
 		.aboutUsPage{
 			background: #fff;
 		}
-		/*.secretLogo{
+		.secretLogo{
 			background: #fff;
 			width:2.14rem;
 			height:2.16rem;
 			margin:0.49rem auto 0.6rem;
 			border-radius: 2.16rem;
-			background: url(../images/zt.png) no-repeat center center;
+			background: url(../images/ztxx.png) no-repeat center center;
 			background-size:100%;
-		}*/
-		
-		.secretLogo{
-			width: 100px;
-			height: 100px;
-			display: flex;
-			justify-content: center;
-			margin: 0 auto;
-			margin-top: 15px;
-		}
-		.secretLogo img{
-			flex: 1;
 		}
 		.version{
 			font-size:0.24rem;
@@ -66,7 +54,7 @@
 		<div class="mui-content">
 			<div id="slider" class="mui-slider mui-fullscreen">
 				<div class="aboutUsPage">
-					<div class="secretLogo"><img src="../images/ztxx.png"/></div>
+					<div class="secretLogo"></div>
 					<div class="version">版本信息 1.0.0</div>
 					<div class="aboutUsArticle">
 						<h3 class="aboutUsArticleTil">中国跆拳道协会简介</h3>
@@ -81,6 +69,18 @@
 		<script src="../js/flexable.js"></script>		
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/common.js"></script>
-		
+		<script>
+			mui.ajax("url",{
+				dataType:'json',//服务器返回json格式数据
+				type:'post',//HTTP请求类型
+				timeout:10000,//超时时间设置为10秒；
+				success:function(data){
+					/*data是后台处理好，前台是显示用的*/
+				},
+				error:function(xhr,type,errorThrown){
+					console.log(type);
+				}
+			}) 
+		</script>
 	</body>
 
