--- a/aboutUs/aboutUs.html
+++ b/aboutUs/aboutUs.html
@@ -69,7 +69,7 @@
 		<script src="../js/flexable.js"></script>		
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/common.js"></script>
-		<script>
+		<!--<script>
 			mui.ajax("url",{
 				dataType:'json',//服务器返回json格式数据
 				type:'post',//HTTP请求类型
@@ -81,6 +81,6 @@
 					console.log(type);
 				}
 			}) 
-		</script>
+		</script>-->
 	</body>
 
