--- a/aboutUs/secret.html
+++ b/aboutUs/secret.html
@@ -58,7 +58,7 @@
 		<script src="../js/flexable.js"></script>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/common.js"></script>
-		<script>
+		<!--<script>
 			mui.ajax("url",{
 				dataType:'json',//服务器返回json格式数据
 				type:'post',//HTTP请求类型
@@ -70,7 +70,7 @@
 					console.log(type);
 				}
 			}) 
-		</script>
+		</script>-->
 	</body>
 
 </html>
