--- a/aboutUs/secret.html
+++ b/aboutUs/secret.html
@@ -58,7 +58,19 @@
 		<script src="../js/flexable.js"></script>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/common.js"></script>
-		
+		<script>
+			mui.ajax("url",{
+				dataType:'json',//服务器返回json格式数据
+				type:'post',//HTTP请求类型
+				timeout:10000,//超时时间设置为10秒；
+				success:function(data){
+					/*data是后台处理好，前台是显示用的*/
+				},
+				error:function(xhr,type,errorThrown){
+					console.log(type);
+				}
+			}) 
+		</script>
 	</body>
 
 </html>
