--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -66,6 +66,7 @@
 			var DGId = GetQueryString("DGId");
 //			var user_Id = 10047;
 //			var DGId = 2355
+			console.log(user_Id,DGId)
 			var urlPath = "http://47.93.192.128:5001/";
 			var NavUrl = urlPath + "Daoguan/Activity_Record";
 			$.ajax({
