--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -65,7 +65,7 @@
 			var user_Id = GetQueryString("user_Id");
 			var DGId = GetQueryString("DGId");
 //			var user_Id = 10047;
-//			var DGId = 2355
+//			var DGId = 23
 			console.log(user_Id,DGId)
 			var urlPath = "http://47.93.192.128:5001/";
 			var NavUrl = urlPath + "Daoguan/Activity_Record";
@@ -82,17 +82,16 @@
 				},
 				success: function(data) {
 					console.log(data)
-					if(data.Data.Success==true){
-						var activition = data.Data.Data.Data;
-						var str=template("cont",{activition:activition});
-						$(".mui-table-view").html(str);
-					};
 					if(data.Data.Success==false){
 						mui.toast("暂无数据",{
 							duration: '500',
 							type: 'div'
 						})
-					}
+					}else if(data.Data.Data.Success==true){
+						var activition = data.Data.Data.Data;
+						var str=template("cont",{activition:activition});
+						$(".mui-table-view").html(str);
+					}  
 					
 
 				}
