--- a/attestation/identifyresult.html
+++ b/attestation/identifyresult.html
@@ -76,7 +76,7 @@
 					{{else if sex == 2}}  
 					   <span class="commonRight">女</span>
 					{{else}}
-					   <span class="commonRight">未知</span>
+					   <span class="commonRight"></span>
 					{{/if}}
 				</li>
 				<li><span class="commonColor">会员账号：</span><span id="memberNumber" class="commonRight">{{userNo}}</span></li>
