--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -46,8 +46,8 @@
 
 			var user_Id = GetQueryString("user_Id");
 			var DGId = GetQueryString("DGId");
-			var user_Id = 10047;
-			var DGId = 23
+//			var user_Id = 10047;
+//			var DGId = 23
 			console.log(user_Id,DGId)
 			var urlPath = "http://47.93.192.128:5001/";
 			var NavUrl = urlPath + "Daoguan/Activity_Record";
