--- a/activationRecord/training_con.html
+++ b/activationRecord/training_con.html
@@ -49,10 +49,10 @@
 				</div>
 			</div>
 			<div class="peixun_new mui-content-padded">
-				<h2 class="mui-h4"><i></i>培训详情</h2>
+				<h2 class="mui-h4"><i></i>活动详情</h2>
 				<p class="mui-text-justify">{{content}}</p>
 			</div>
-			<button class="mui-btn mui-btn-primary mui-btn-block" onclick="myUrl()">已参加过的活动</button>
+			<!--<button class="mui-btn mui-btn-primary mui-btn-block" onclick="myUrl()">已参加过的活动</button>-->
 			
 			
 		</script>
