--- a/members/membersCont.html
+++ b/members/membersCont.html
@@ -50,7 +50,7 @@
 				</div>
 			</div>
 			<ul class="peixun_new mui-content-padded">
-				<h2 class="mui-h4"><i></i>培训详情</h2>
+				<h2 class="mui-h4"><i></i>活动详情</h2>
 				<p class="mui-text-justify">{{v.content}}</p>
 				<ul class="imgList">
 					{{each v.pics as value}}
@@ -59,7 +59,7 @@
 
 				</ul>
 			</div>
-			<button class="mui-btn mui-btn-primary mui-btn-block">已举办过的活动</button>
+			<!--<button class="mui-btn mui-btn-primary mui-btn-block">已举办过的活动</button>-->
 			
 			{{/each}}
 		</script>
