--- a/aboutUs/aboutUs.html
+++ b/aboutUs/aboutUs.html
@@ -20,7 +20,7 @@
 			height:2.16rem;
 			margin:0.49rem auto 0.6rem;
 			border-radius: 2.16rem;
-			background: url(../images/ztx.png) no-repeat center center;
+			background: url(../images/ztxx.png) no-repeat center center;
 			background-size:100%;
 		}
 		.version{
