--- a/index.html
+++ b/index.html
@@ -63,9 +63,12 @@
 	</head>
 
 	<body>
+		
 		<div class="mui-content">
+			
 			<div id="slider" class="mui-slider mui-fullscreen">
 				<div class="aboutUsPage">
+					<a href="activationRecord/activationRecord.html"  style="display: inline-block; margin-top: 30px;height: 30px;">活动新闻</a>
 					<div class="secretLogo"><img src="images/ztxx.png"/></div>
 					<div class="version">版本信息 1.0.0</div>
 					<div class="aboutUsArticle">
