--- a/aboutUs/secret.html
+++ b/aboutUs/secret.html
@@ -67,7 +67,7 @@
 					/*data是后台处理好，前台是显示用的*/
 				},
 				error:function(xhr,type,errorThrown){
-					console.log(type);
+//					console.log(type);
 				}
 			}) 
 		</script>
